src-ken&y/objects/Allocation_Rule__c.object
<CustomObject>
    <customHelpPage>HelpAllocationRule</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocation Used</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocation</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Process_Type__c</fullName>
        <label>Business Process | Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OTC</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>PTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Allocation Rules</relationshipLabel>
        <relationshipName>Allocation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Corporate Parent</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Allocation Rules</relationshipLabel>
        <relationshipName>Allocation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Allocation Rules</relationshipLabel>
        <relationshipName>Allocation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical_Percent__c</fullName>
        <inlineHelpText>Based on the customer&apos;s historical data (previous shipments) and the total amount of inventory available, this value represents the % of total inventory that can be allocated to the selected customer.</inlineHelpText>
        <label>Historical Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>History_From__c</fullName>
        <description>Starting date range for history calculations</description>
        <inlineHelpText>Date on which  historical fair share calculation starts. The Historical Fair Share rule provides you with a way to limit sales to each customer based on their historical data (previous shipments) and the total amount of inventory available.</inlineHelpText>
        <label>History From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>History_To__c</fullName>
        <description>End date range for history calculations</description>
        <inlineHelpText>Date on which historical fair share calculation ends. The Historical Fair Share rule provides you with a way to limit sales to each customer based on their historical data (previous shipments) and the total amount of inventory available.</inlineHelpText>
        <label>History To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Allocation Rules</relationshipLabel>
        <relationshipName>Allocation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forward Buy</fullName>
                </value>
                <value>
                    <fullName>Historical Fair Share</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Allocation Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allocation__c</columns>
        <columns>Allocation_Used__c</columns>
        <columns>Company__c</columns>
        <columns>Customer__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Facility__c</columns>
        <columns>Product__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Business_Process_Type__c</columns>
        <columns>History_From__c</columns>
        <columns>History_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Allocation Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( End_Date__c )</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date can&apos;t be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date can&apos;t be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_cant_be_greater_then_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date can&apos;t be greater than  End Date</errorMessage>
    </validationRules>
</CustomObject>